--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  title: MyString
-  desciption: MyText
-  price: 1
+ps4:
+  title: PS4 1st-Gen
+  desciption: Classic Console
+  price: 75
 
-two:
-  title: MyString
-  desciption: MyText
-  price: 1
+switch:
+  title: Nintento Switch
+  desciption: Very little used
+  price: 100
